--- a/style.css
+++ b/style.css
@@ -2,4 +2,11 @@
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
+    text-align: center;
+}
+body{
+    height: 100vh;
+    background-image: url(./pic.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
