--- a/style.css
+++ b/style.css
@@ -10,3 +10,14 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+div{
+    width: 500px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    background-color: rgba(0,0,0,0.5);
+    transform: translate(-50%,-50%);
+    padding: 5px;
+    box-shadow: 2px 2px 20px #91919191;
+}
