--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Raleway:wght@600&display=swap');
+
+
+
+body{
     padding: 0%;
     margin: 0%;
-    box-sizing: border-box;
     text-align: center;
-}
-body{
+    font-family: 'Poppins', sans-serif;
     height: 100vh;
     background-image: url(./pic.jpg);
     background-size: cover;
@@ -18,6 +20,56 @@ div{
     top: 50%;
     background-color: rgba(0,0,0,0.5);
     transform: translate(-50%,-50%);
-    padding: 5px;
+    padding: 10px;
     box-shadow: 2px 2px 20px #91919191;
+}
+
+h2{
+    font-size: 30px;
+    font-weight: 600;
+    color: white;
+}
+
+.text{
+    text-align: left;
+    margin-left: 100px;
+    color: white;
+}
+
+#weight, #height{
+    color: white;
+    text-align: left;
+    font-size: 20px;
+    font-weight: 200;
+    border: 1px solid #fff;
+    width: 300px;
+    background-color: transparent;
+    border-radius: 2px;
+    outline: none;
+}
+
+#result{
+    color: white;
+}
+
+#btn{
+    font-size: inherit;
+    margin-top: 10px;
+    border: none;
+    color: #fff;
+    background-color: #828282;
+    width: 150px;
+    padding: 10px;
+    outline: none;
+    cursor: pointer;
+    border-radius: 2px;
+}
+
+#btn:hover{
+    box-shadow: 1px 1px 10px #341f97;
+}
+
+#info{
+    color: #fff;
+    font-size: 15px;
 }
